add logout view and optimize settings.py

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 #CORS_ALLOWED_ORIGINS=https://www.yourfrontend.com,https://app.yourfrontend.com
 CORS_ALLOWED_ORIGINS=http://localhost:5173
+DJANGO_SECRET_KEY=django-insecure-#=-by*qkh3+1m&#s&2s3)lpx7m&9lqjj)w8@u5q-$kra@bok=#
