seperating settings into seperate files to adapt to different environments

--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
 #CORS_ALLOWED_ORIGINS=https://www.yourfrontend.com,https://app.yourfrontend.com
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 DJANGO_SECRET_KEY=django-insecure-#=-by*qkh3+1m&#s&2s3)lpx7m&9lqjj)w8@u5q-$kra@bok=#
+# Environment
+DJANGO_ENVIRONMENT=development
+# Change to 'production' in production
+
+# Database settings for production
+# DB_NAME=db_admin
+# DB_USER=djangoProjectAdmin
+# DB_PASSWORD=12345678
+# DB_HOST=localhost
+# DB_PORT=3306
+
+# Allowed hosts for production
+#ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
