--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 #CORS_ALLOWED_ORIGINS=https://www.yourfrontend.com,https://app.yourfrontend.com
-CORS_ALLOWED_ORIGINS=http://localhost:5173
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8080
 DJANGO_SECRET_KEY=django-insecure-#=-by*qkh3+1m&#s&2s3)lpx7m&9lqjj)w8@u5q-$kra@bok=#
 # Environment
 DJANGO_ENVIRONMENT=development
 # Change to 'production' in production
+
+DEBUG=True
 
 # Database settings for production
 # DB_NAME=db_admin
