feat: add ratelimit for APIs in user/views.py

--- a/.env
+++ b/.env
@@ -16,3 +16,7 @@ DEBUG=True
 
 # Allowed hosts for production
 #ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+
+RATE_LIMIT_LOGIN=10/m
+RATE_LIMIT_REFRESH=10/m
+RATE_LIMIT_CSRF=10/m
